--- a/download/index.html
+++ b/download/index.html
@@ -18,7 +18,7 @@
                 <!-- 更新内容 -->
                 <h4 style="color: white;"><br><br>1.添加了炮台，墙，物品和工厂</h4>
                 <!-- 下载地址 -->
-                <a href="https://objects.githubusercontent.com/github-production-release-asset-2e65be/690080690/b8519467-6041-4974-b5e7-deb304bca86f?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAIWNJYAX4CSVEH53A%2F20230924%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20230924T111804Z&X-Amz-Expires=300&X-Amz-Signature=01e0a6fab877bfd00330b076655e31703b8dc9306a4b4aac64d05c1cb954a2ba&X-Amz-SignedHeaders=host&actor_id=138857457&key_id=0&repo_id=690080690&response-content-disposition=attachment%3B%20filename%3DAlpha-0.1.0.zip&response-content-type=application%2Foctet-stream" type="button">点击下载</a>
+                <a href="https://github.com/DFAFSS/Polar_Technology/releases/download/Alpha-0.1.0/Alpha-0.1.0.zip" type="button">点击下载</a>
             </li>
         </ul>
     </div>
