--- a/download/index.html
+++ b/download/index.html
@@ -20,6 +20,14 @@
                 <!-- 下载地址 -->
                 <a href="https://github.com/DFAFSS/Polar_Technology/releases/download/Alpha-0.1.0/Alpha-0.1.0.zip" type="button">点击下载</a>
             </li>
+            <li>
+                <!-- 版本号：版本-阶段 -->
+                <h4 style="color: #f4ba6e;font-size: 30px;">0.2.0-Alpha</h4>
+                <!-- 更新内容 -->
+                <h4 style="color: white;"><br><br>1.添加了炮台（亡灵，镭射）<br>2.添加了工厂（大型硅厂，大型石墨厂，冰水混合器，炼油厂）<br>3.添加了四种液体（气油，石脑油，石油气，冰水混合物）<br>4.添加了高架火炬</h4>
+                <!-- 下载地址 -->
+                <a href="https://github.com/DFAFSS/Polar_Technology/releases/download/Alpha-0.2.0/Alpha-0.2.0.zip" type="button">点击下载</a>
+            </li>
         </ul>
     </div>
 </body>
