--- a/EasyMcLink/index.html
+++ b/EasyMcLink/index.html
@@ -120,7 +120,7 @@
             <img src="Images/Content2.png" style="size: 20%; margin-top: 600px;">
         </li>
         <li>
-            <video align="center" title="使用教程" controls="controls" src="https://github.com/DFAFSS/DFAFSS.github.io/releases/download/1.0.1Beta/Video.mp4"></video>
+            <video align="center" title="使用教程" controls="controls" src="https://github.com/DFAFSS/DFAFSS.github.io/releases/download/1.0.1Beta/EasyMcLinkVideo.mp4"></video>
         </li>
         <li>
             <button>
