--- a/TCHWEB/index.html
+++ b/TCHWEB/index.html
@@ -65,7 +65,7 @@
 						<img src="static/picture/tx.jpg">
 						<h3>服务器历史</h3>
 						<p>Minecraft TCH-2由 IKUN4477 建立的一个MinecraftForge服务器</p>
-						<p>服务器目前分为生存服、科技服。</p>
+						<p>服务器目前分为生存、科技,养老休闲服。</p>
 						<h3>想加入服务器，应该怎么做？</h3>
 						<p>非常简单，您只需要阅读<a href="1.html" target="_blank">游戏规则</a>，然后下载客户端整合包，拖入启动器下载即可游玩</p>
 						<p>了，<a href="1.html" target="_blank">我想加入游戏！</a></p>
